@@ -22,6 +22,7 @@ Changes are listed below, grouped under each point release of SuperCollider.
 * 2010-09-11 bug in audio rate mapping fixed, when new source object was inserted in a mapped node proxy - jr
 * 2010-09-12 added Dwrand UGen - jr
 * 2010-09-15 SystemClock and TempoClock sched and schedAbs with inf time doesn't schedule the task in the first place - jr
+* 2010-10-07 change the mac HID error-handler code to output errors to sc post window rather than to mac log; removes a pascal-string issue - ds
 
 Bugfixes:
 ---------
